--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
-.App {
-  text-align: center;
-}
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#FormBoxContainer,
+#FormBoxTop,
+#FormBoxBot,
+.widgets {
   display: flex;
-  flex-direction: column;
+}
+
+#FormBoxContainer {
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: column;
+  gap: 10px;
+  /* border: 1px solid grey; */
 }
 
-.App-link {
-  color: #61dafb;
+#FormBoxTop {
+  gap: 30px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#FormBoxBot {
+  gap: 15px;
+}
+
+.centerElement {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.widgets {
+  flex-direction: column;
+  border: 1px solid grey;
+  border-radius: 12px;
+}
+
+i {
+  font-size: 100px;
+}
+
+.centerText {
+  text-align: center;
 }
