--- a/src/widgets/TimeWidget/TimeWidget.css
+++ b/src/widgets/TimeWidget/TimeWidget.css
@@ -1,31 +1,64 @@
 .TimeWidgetModal {
+  /* keeps content together */
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
 
-  position: fixed;
+  /* moves the content to the center of the screen */
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  border: 1px solid #ccc;
-  background: #fff;
-  overflow: auto;
-  border-radius: 4px;
   outline: none;
   padding: 20px;
 }
 
-.TimeWidgetModalOverlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, 0.75);
+.TimeWidgetOverlay {
+  /*
+  No Overlay
+  */
+}
+#TimeWidgetOpenButton {
+  background: none;
+  border: none;
+  display: block;
+  width: 100%;
+  border: none;
+  cursor: pointer;
+  text-align: center;
+  height: 100%;
+  text-align: center;
+  font-size: 16px;
+  opacity: 0.5;
+  transition: 0.3s;
 }
 
-#TimeWidgetOpenButton {
+#TimeWidgetOpenButton:hover .bi-clock::before {
+  opacity: 1;
+  content: "\F291";
 }
+
 #TimeWidgetCloseButton {
+  position: absolute;
+  border: none;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  color: red;
+}
+
+#TimeWidgetContent {
+  border-top: 10px burlywood solid;
+  text-align: center;
+}
+
+.X {
+  background: none;
+  padding: 0px;
+  margin: 0px;
+}
+
+p {
+  margin-top: 0;
 }
