--- a/src/widgets/TodoListWidget/TodoList.css
+++ b/src/widgets/TodoListWidget/TodoList.css
@@ -54,6 +54,7 @@
   flex-direction: column;
   border-top: 10px burlywood solid;
   text-align: center;
+  background-color: white;
 }
 
 #A-RButtons {
