--- a/src/App.css
+++ b/src/App.css
@@ -29,3 +29,17 @@ i {
 .centerText {
   text-align: center;
 }
+
+.announcement {
+  display: inline-block;
+  height: 100%;
+  text-align: center;
+  width: 100%;
+  background: black;
+  color: white;
+  font-family: Arial, sans;
+  margin: 0;
+  padding: 0;
+  vertical-align: middle;
+  font-size: large;
+}
