--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
-
+/*@tailwind base;
+@tailwind components;
+@tailwind utilities;
+*/
 #TaskBar,
 .widgets {
   display: flex;
